# practicestuff

./: Cargo.toml  README.md
src/: application.rs  args.rs  colour.rs  config.rs  help.rs  lib.rs  main.rs  question.rs  skill.rs  stats.rs
src/args/: definition.rs  help.rs  parser.rs  set_value.rs
src/skill/: doomsday_algorithm.rs  powers.rs  times_table.rs
tests/: args_validation.rs  doomsday.rs  help_and_version.rs  powers.rs  times_table.rs
tests/common/: mod.rs
