[package]
name = "practicestuff"
version = "0.0.25"
description = "Simple CLI trainer for improving calculation and memorisation skills"
authors = ["Bartłomiej Jaszczak"]
repository = "https://gitlab.com/bartekjaszczak/practicestuff"
readme = "README.md"
license = "MIT"
keywords = ["learning", "math", "doomsday", "memory"]
categories = ["command-line-utilities", "mathematics"]
edition = "2021"

[dependencies]
ctrlc = "3.4"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
